# longman_scraper

./: .gitignore  README.md  pyproject.toml  scrape_word.py  scrape_words.py  test_word.py  test_words.py  word.json  words.json
src/longman_scraper/: __init__.py  _text.py  api.py  audio.py  browser.py  exceptions.py  parser.py  schema.py
src/longman_scraper/fields/: __init__.py  head.py  sense.py
src/longman_scraper/parsers/: crossref.py  examples.py  head.py  pronunciation.py  sense.py
tests/: test_parser.py
tests/fixtures/: book.html
