[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "longman-scraper"
version = "0.1.0"
description = "Async scraper for ldoceonline.com (Longman Dictionary of Contemporary English)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "playwright>=1.46.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
